[metadata]
name = komby
version = 1.0
author = Anselmo Luiz Éden Battisti
author_email = anselmobattisti@gmail.com
description = Finding all the possible partitions of a list.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anselmobattisti/komby
project_urls =
    Bug Tracker = https://github.com/anselmobattisti/komby/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src